--- a/frontend/src/popup.html
+++ b/frontend/src/popup.html
@@ -8,6 +8,6 @@
   </body>
   <script src="popup.js"></script>
   <% if (USE_RECAPTCHA) { %>
-    <script src="https://www.google.com/recaptcha/api.js?render=explicit&onload=recaptchaCallback" async defer></script>
+    <script src="https://www.google.com/recaptcha/api.js?render=<%=RECAPTCHA_SITEKEY%>&onload=recaptchaCallback"></script>
   <% } %>
 </html>
