Update Privacy Policy on website

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -12,16 +12,20 @@
 		</p>
 		<h2>Privacy Policy</h2>
 		<p>
-				Tabchat is built to be privacy conscious and only stores the 
-				bare minimum amount of data needed for it to function. When 
-				you navigate to a webpage with Tabchat installed, the URL of 
-				the webpage is sent to Tabchat, so that it can return the list
-				of comments that were posted to that webpage. If you choose to
-				post a comment, the contents of that comment will be sent to 
-				Tabchat and stored. This comment will then be viewable by 
-				anyone else using Tabchat. <strong>No personally identifying 
-				information is stored</strong>, and <strong>no data is shared 
-				with any third party</strong>. 
-		</p>
+      Tabchat is built to be privacy conscious and only stores the 
+      bare minimum amount of data needed for it to function. When 
+      you navigate to a webpage with Tabchat installed, the URL of 
+      the webpage is sent to Tabchat, so that it can return the list
+      of comments that were posted to that webpage. If you choose to
+      post a comment, the contents of that comment will be sent to 
+      Tabchat and stored. Your comment will then be viewable by anyone 
+      else using Tabchat. <strong>No personally identifying information 
+      is stored by Tabchat</strong>.
+    </p>
+    <p>
+      Tabchat uses Google's reCAPTCHA to prevent spam. Some of your 
+      behavior is sent to Google for it to analyze whether you're a bot
+      or not. 
+    </p>
 	</body>
 </html>
