Add link to Chrome extension

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -8,8 +8,10 @@
 		<p>
 			Tabchat is a browser extension that allows you
 			to leave comments on any webpage for others to see.
-			It's still in development - but it's coming soon!
-		</p>
+    </p>
+    <p>
+      It's available now on <a href="https://chrome.google.com/webstore/detail/tabchat/ijilaalgbbmmbkgonfkokjajnlgojaio">Chrome</a>. A Firefox version is coming soon!
+    </p>
 		<h2>Privacy Policy</h2>
 		<p>
       Tabchat is built to be privacy conscious and only stores the 
