--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,31 +1,31 @@
 <html>
 	<head>
 		<title>Tabchat</title>
+    <link rel="stylesheet" href="/style.css"/>
+    <link rel="icon" href="images/icon.svg" />
 	</head>
-	<link rel="stylesheet" href="/style.css"/>
 	<body>
+    <div id="logo"><img src="images/icon.svg" /></div>
 		<h1>Tabchat</h1>
 		<p>
-			Tabchat is a browser extension that allows you
-			to leave comments on any webpage for others to see.
+			Tabchat is a browser extension that lets you
+			leave comments on any webpage for others to see.
     </p>
     <p>
       It's available now on <a href="https://chrome.google.com/webstore/detail/tabchat/ijilaalgbbmmbkgonfkokjajnlgojaio">Chrome</a>. A Firefox version is coming soon!
     </p>
+    <p>
+      And the best part? It's <a href="https://github.com/mshindal/tabchat">open source</a>.
+    </p>
+    <h2>Screenshots</h2>
+    <img class="screenshot" src="images/car-and-driver-screenshot.png" />
+    <img class="screenshot" src="images/lab-screenshot.png" />
 		<h2>Privacy Policy</h2>
 		<p>
-      Tabchat is built to be privacy conscious and only stores the 
-      bare minimum amount of data needed for it to function. When 
-      you navigate to a webpage with Tabchat installed, the URL of 
-      the webpage is sent to Tabchat, so that it can return the list
-      of comments that were posted to that webpage. If you choose to
-      post a comment, the contents of that comment will be sent to 
-      Tabchat and stored. Your comment will then be viewable by anyone 
-      else using Tabchat. <strong>No personally identifying information 
-      is stored by Tabchat</strong>.
+      Tabchat is built to be privacy conscious and doesn't store any personally identifying information.  
     </p>
     <p>
-      Tabchat uses Google's reCAPTCHA to prevent spam. Some of your 
+      It uses Google's reCAPTCHA to prevent spam. Some of your 
       behavior is sent to Google for it to analyze whether you're a bot
       or not. 
     </p>
