Add link to Firefox addon

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -12,7 +12,7 @@
 			leave comments on any webpage for others to see.
     </p>
     <p>
-      It's available now on <a href="https://chrome.google.com/webstore/detail/tabchat/ijilaalgbbmmbkgonfkokjajnlgojaio">Chrome</a>. A Firefox version is coming soon!
+      It's available on <a href="https://chrome.google.com/webstore/detail/tabchat/ijilaalgbbmmbkgonfkokjajnlgojaio">Chrome</a> and <a href="https://addons.mozilla.org/en-US/firefox/addon/tabchat/">Firefox</a>.
     </p>
     <p>
       And the best part? It's <a href="https://github.com/mshindal/tabchat">open source</a>.
